should fix mobile stretch 2

--- a/fatLennys.css
+++ b/fatLennys.css
@@ -307,8 +307,14 @@ button{
 		font-size: 13px;
 	}
 	.carousel{
-		width:380px;
+		width:390px;
 		height:200px;
+	}
+	.carouselButtonLeft{
+		left:0;
+	}
+	.carouselButtonRight{
+		right:0;
 	}
 	.carouselIndicator{
 		padding:0;
